Fix in the gap of mobile - desktop

--- a/src/components/sidebar/media.styl
+++ b/src/components/sidebar/media.styl
@@ -15,11 +15,6 @@
 //
 // @media (max-width $desktopLarge)
 
-@media only screen and (min-width $tabletPortrait) and (max-width $tabletLandscape)
-  .sidebar
-    position absolute
-    left -200px
-
 @media only screen and (min-width $mobilePortrait) and (max-width $mobileLandscape) and (orientation : portrait)
   .sidebar
     position absolute
