--- a/src/modules/media.styl
+++ b/src/modules/media.styl
@@ -1,4 +1,4 @@
-@media (min-width $mobilePortrait) and (max-width $desktopSmall)
+@media (min-width $mobilePortrait) and (max-width $tabletPortrait)
   .content
     width 100%
     min-width 320px
